bulk actions for peers and users (#492) (#602)
