# internal/app/api/v0/model/models_bulk.go
@@ -1,0 +1,10 @@
+package model
+
+type BulkPeerRequest struct {
+	Identifiers []string `json:"Identifiers" binding:"required"`
+	Reason      string   `json:"Reason"`
+}
+
+type BulkUserRequest struct {
+	Identifiers []string `json:"Identifiers" binding:"required"`
+}
